--- a/content.css
+++ b/content.css
@@ -3,10 +3,17 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 1%;
+  padding: .375rem .75rem;
   color: white;
   
-  background:-webkit-gradient(linear, left top, left bottom, from(#2e88c4), to(#075698));
+  /*background:-webkit-gradient(linear, left top, left bottom, from(#2e88c4), to(#075698));*/
+  background-color: #007bff;
+  border-color: #007bff;
   border: 1px solid;
-  border-radius: 2px;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.selection_bubble:hover{
+    background-color: #0069d9;
+    border-color: #0062cc;
 }
